FIX:update chinese translation
Change-Id: I254c0617a9ee5e43aa1388b06788f332f0094a40

--- a/bbl/i18n/list.txt
+++ b/bbl/i18n/list.txt
@@ -38,6 +38,7 @@ src/slic3r/GUI/Jobs/PlaterJob.cpp
 src/slic3r/GUI/Jobs/RotoptimizeJob.cpp
 src/slic3r/GUI/Jobs/BindJob.cpp
 src/slic3r/GUI/Jobs/PrintJob.cpp
+src/slic3r/GUI/Jobs/SendJob.cpp
 src/slic3r/GUI/Jobs/UpgradeNetworkJob.cpp
 src/slic3r/GUI/AboutDialog.cpp
 src/slic3r/GUI/AMSMaterialsSetting.cpp
